# agentic-ai-systems

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  questions.html  quick-start.ipynb  search.json
L01/: 00_intro.html  00_intro_comparison.html  01_agents.html  01_agents.out.html  01_agents.out.ipynb  02_subagents.html  03_how_agents_work.html  04_semantic-search.html  05_RAG_agent.html  06_RAG_agentic_systems.html  06_RAG_components.html  06_components.html  07_workflows.html  08_patterns.html  08_workflow_patterns.html  09_langsmith.html  09_memory.html  10_langsmith.html  10_projects.html  Short-term memory.html  case-studies.html  checkpoint.html  notes-case-studies.html  subagents_hil.html  tasks.html  use-cases.html  why_split.html  xx_embeddings.html  xx_retriveal.html
L04_Advanced/: Voice_Agent.html  Voice_Agent_slides.html
Lessons/: _quarto.yml  index.qmd
Lessons/L01/: 00_intro.qmd  00_intro_comparison.qmd  01_agents.ipynb  02_subagents.ipynb  03_how_agents_work.ipynb  04_semantic-search.ipynb  05_RAG_agent.ipynb  06_RAG_agentic_systems.qmd  06_components.qmd  07_workflows.ipynb  08_patterns.ipynb  08_workflow_patterns.ipynb  09_langsmith.qmd  09_memory.qmd  09_project.qmd  10_langsmith.qmd  10_projects.qmd  case-studies.qmd  checkpoint.ipynb  quick-start.ipynb  use-cases.qmd
Lessons/L02/: semantic-search.ipynb
Lessons/L03/: RAG_agent.ipynb
site_libs/bootstrap/: bootstrap-7dc3907ddb6ec99bf1b87f80a83abe8b.min.css
