[project]
name = "dagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "deepagents>=0.4.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "tavily-python>=0.7.21",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
