[project]
name = "content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "bs4>=0.0.2",
    "ddgs>=9.10.0",
    "deepagents>=0.4.1",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "langgraph-cli[inmem]>=0.4.12",
    "pypdf>=6.7.1",
    "sentence-transformers>=5.2.3",
    "tavily-python>=0.7.21",
    "transformers>=4.57.6",
    "trl>=0.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
